@@ -1,5 +1,7 @@
 VER_006
 - Bugfix: windy weather conditions not handled
+  Bugfix: distinguish between sunny and stars (unsing daytime)
+  Bugfix: some "athmosphere" weather conditions mean rain
 
 VER_005
 - Added openweathermap.org weather provider support
